<resources>
    <string name="app_name">VCApplication</string>
    <string name="email_id">Email Id</string>
    <string name="otp">OTP</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="resend">Resend</string>
    <string name="login_email_address_missing">Enter Valid Email Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>

</resources>