<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@color/colorBackground">

  <ImageView
      android:id="@+id/logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_logo"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />

  <TextView
      android:id="@+id/tv_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/email_id"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/logo"
      android:textColor="@color/colorText"
      android:fontFamily="@font/nunito_bold"
      android:textSize="22sp"
      />

  <EditText
      android:id="@+id/et_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email_id"
      app:layout_constraintTop_toBottomOf="@id/tv_email"
      app:layout_constraintStart_toStartOf="parent"
      android:fontFamily="@font/nunito_light"
      android:textColor="@color/colorText"
      android:inputType="textEmailAddress"
      android:imeOptions="actionNext"
      />



  <TextView
      android:id="@+id/tv_otp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/otp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/et_email"
      android:textColor="@color/colorText"
      android:fontFamily="@font/nunito_bold"
      android:textSize="22sp"
      />

  <EditText
      android:id="@+id/et_otp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/otp"
      app:layout_constraintTop_toBottomOf="@id/tv_otp"
      app:layout_constraintStart_toStartOf="parent"
      android:fontFamily="@font/nunito_light"
      android:textColor="@color/colorText"
      android:inputType="number"
      android:maxLength="4"
      />

  <Button
      android:id="@+id/button_send"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/send"
      app:layout_constraintTop_toBottomOf="@id/et_otp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
       />

  <Button
      android:id="@+id/button_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      app:layout_constraintTop_toBottomOf="@id/et_otp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />

  <TextView
      android:id="@+id/tv_resend"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/resend"
      android:textSize="12sp"
      android:textColor="@color/red"
      android:fontFamily="@font/nunito_black"
      app:layout_constraintStart_toEndOf="@id/button_send"
      app:layout_constraintTop_toBottomOf="@id/button_send"
      app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.constraintlayout.widget.Group
      android:id="@+id/login_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="visible"
      app:constraint_referenced_ids="tv_email,et_email,button_login"/>

  <androidx.constraintlayout.widget.Group
      android:id="@+id/otp_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:constraint_referenced_ids="tv_otp,et_otp,button_send, tv_resend"/>


</androidx.constraintlayout.widget.ConstraintLayout>